Preferences for Classic Google Translator #22

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -203,5 +203,9 @@
     "harmCategoryDangerousContentLabel": "Dangerous Content",
     "@harmCategoryDangerousContentLabel": {
         "description": "Text shown in the Preferences for the safety settings of the Dangerous Content harm category"
+    },
+    "classicGoogleTranslateLabel": "Classic Google Translation",
+    "@classicGoogleTranslateLabel": {
+        "description": "Text shown in the Preferences for the Classic Google Translation"
     }
 }
