Convert local tools into native facts, and making heart rate measurement optional #53 This removes ugly bubbling through the function calling facilities of latlon and HR

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -231,5 +231,9 @@
     "cameraResolutionVeryHighLabel": "Very High (1080p)",
     "@cameraResolutionVeryHighLabel": {
         "description": "Text shown in the preferences settings Very High Camera Resolution selection"
+    },
+    "preferencesMeasureHeartRateLabel": "Measure Heart Rate?",
+    "@preferencesMeasureHeartRateLabel": {
+        "description": "Text shown in the preferences settings for Measure Heart Rate?"
     }
 }
